--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile "com.sparkjava:spark-core:2.7.2"
     compile "com.sparkjava:spark-template-handlebars:2.7.1"
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
 }
